Forsøk på å fikse opp i kode